# macaboo

./: README.md  pyproject.toml
macaboo/: __init__.py  __main__.py  cli.py  events.py  logger.py  screenshot.py  server.py
macaboo/static/: index.html
macaboo/templates/: index.html
