[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macaboo"
version = "0.2.0"
description = "CLI utilities for capturing macOS application windows"
authors = [ { name="Macaboo" } ]
requires-python = ">=3.9"
dependencies = [
    "pyobjc-framework-Quartz",
    "pyobjc-framework-Cocoa",
    "aiohttp",
]

[project.scripts]
macaboo = "macaboo.cli:main"
